--- a/BookRental/pom.xml
+++ b/BookRental/pom.xml
@@ -48,6 +48,16 @@
       <artifactId>spring-security-core</artifactId>
       <version>5.8.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+      <version>5.3.15</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>javax.mail</artifactId>
+      <version>1.6.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>BookRental</finalName>
