--- a/BookRental/pom.xml
+++ b/BookRental/pom.xml
@@ -58,6 +58,11 @@
       <artifactId>javax.mail</artifactId>
       <version>1.6.2</version>
     </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.5</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>BookRental</finalName>
