--- a/BookRental/src/main/webapp/WEB-INF/web.xml
+++ b/BookRental/src/main/webapp/WEB-INF/web.xml
@@ -17,10 +17,10 @@
     <init-param>
       <param-name>contextConfigLocation</param-name>
       <param-value>
-        daelim.book.rental.admin.config.MvcConfig
-        daelim.book.rental.admin.config.DbConfig
-        daelim.book.rental.admin.config.SecurityConfig
-        daelim.book.rental.admin.config.MailConfig
+        daelim.book.rental.config.MvcConfig
+        daelim.book.rental.config.DbConfig
+        daelim.book.rental.config.SecurityConfig
+        daelim.book.rental.config.MailConfig
       </param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
